Fixed mobile navbar-collapse bugs. :hamster:

--- a/css/style.css
+++ b/css/style.css
@@ -56,17 +56,22 @@ body {
     font-weight: 350;
 }
 
+.navbar-collapse {
+  border: 0 !important;
+}
+
 .navbar, .navbar-default {
     background-color: transparent;
     /*rgba(0, 0, 0, 0.4)*/
     margin-bottom: 0;
     min-height: 50px;
-    border-bottom: none;
+    border: 0 !important;
     /*1px solid white !important*/
 }
 .navbar.show, .navbar-default.show {
     background-color: rgba(0, 0, 0, 0.4);
     transition: all 0.3s ease;
+    border: 0 !important;
 }
 
 .nav li {
@@ -88,6 +93,15 @@ body {
     width: 50px;
 
     margin-bottom: 5px !important;
+}
+@media only screen and (max-width: 767px) {
+    .navbar-collapse {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+    .navbar-brand img {
+      width: 50px;
+      margin-bottom: 5px !important;
+    }
 }
 
 .navbar-default .navbar-nav>li>a {
